@@ -308,7 +308,7 @@ Set Force Feedback clipping color.
 This enables Tyre Load display.
 
     show_tyre_load_ratio
-Show tyre load percentage ratio between left & right tyres of same axle. Set `false` to show individual tyre load in Newtons.
+Show percentage ratio of tyre load between each and total tyre load. Set `false` to show individual tyre load in Newtons.
 
 
 ## Radar
