@@ -170,15 +170,15 @@ class Setting:
             "bar_gap": 0,
             "fuel_unit": "0",
             "font_color_fuel": "#FFFFFF",
-            "font_color_consumption": "#555555",
-            "font_color_estimate": "#DDDDDD",
-            "font_color_pits": "#DDDDDD",
             "bkg_color_fuel": "#009900",
+            "font_color_consumption": "#555555",
             "bkg_color_consumption": "#FFFFFF",
+            "font_color_estimate": "#DDDDDD",
             "bkg_color_estimate": "#222222",
+            "font_color_pits": "#DDDDDD",
             "bkg_color_pits": "#555555",
-            "bkg_color_low_fuel": "#FF2200",
             "low_fuel_lap_threshold": 2,
+            "bkg_color_low_fuel": "#FF2200",
             "show_caption": True,
             "font_color_caption": "#CCCCCC",
             "bkg_color_caption": "#777777",
@@ -300,6 +300,8 @@ class Setting:
             "show_tyre_load_ratio": True,
             "font_color_load": "#CCCCCC",
             "bkg_color_load": "#222222",
+            "column_index_pressure": 1,
+            "column_index_load": 2,
         },
         "radar": {
             "enable": True,
