@@ -12,6 +12,10 @@ TinyPedal (WIP)
 * Fuel widget
     - [New]Added "low_fuel_lap_threshold" option in JSON.
 
+* Pressure widget
+    - Reworked layouts (vertical & horizontal).
+    - [New]Each info display order can be customized via "column_index" in JSON.
+
 * Relative Widget
     - Removed brackets from combined driver name if name is empty.
 
@@ -31,7 +35,7 @@ TinyPedal (WIP)
     - Auto sorts all options in JSON file according to default setting template
       for better readability and consistency.
     - Optimized GUI update methods for widgets:
-      Cruise, Deltabest, DRS, Engine, Force, Fuel, Sectors, Session, Timing.
+      Cruise, Deltabest, DRS, Engine, Force, Fuel, Pressure, Sectors, Session, Timing.
     - Use Linux XDG directories for storing user data (by Bernat).
     - Add Linux instructions to README.md (by Bernat).
 
